2000-12-04  Johannes Zellner  <johannes@zellner.org>

	* term/ggi.trm: copy the ggi options to term_options

2000-12-04  Johannes Zellner  <johannes@zellner.org>

	* term/ggi.trm: implemented relative motion events for the ggi
	terminal.  so that mouse actions work also with the DGA target.

2000-12-04  Petr Mikulik  <mikulik@physics.muni.cz>

        * docs/gnuplot.doc docs/psdoc/README docs/psdoc/ps_guide.ps
	lisp/gnuplot-gui.el src/set.c src/term.c src/term_api.h term/post.trm:
	a patch enabling the PostScript	terminal to use CP-852 encoding. 

2000-11-30  Petr Mikulik  <mikulik@physics.muni.cz>

	* term/pm.trm src/os2/gclient.c docs/gnuplot.doc: change PM terminal
	codepage according to 'set encoding', and use codepage 912 for
	iso_8859_2' (new routine PM_set_codepage() in pm.trm).

2000-11-29  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/syscfg.h: #define FAQ_LOCATION "http://www.gnuplot.org/faq".

2000-11-29  Levente Novak  <novak@jaguar.dote.hu>

        * docs/gnuplot.doc docs/gnuplot.texi docs/psdoc/README
	docs/psdoc/ps_guide.ps lisp/gnuplot-gui.el src/set.c src/term.c
	src/term_api.h term/post.trm: a patch enabling the PostScript
	terminal to use ISO-8859-2 encoding. 

2000-11-27  Alexander Mai  <st002279@hrzpub.tu-darmstadt.de>

        * src/readline.c: readline.c did not built with HAVE_LIBREADLINE.
	So remove an #ifdef and - being here - make two symbols static.

2000-11-24  Lars Hecking  <lhecking@nmrc.ucc.ie>

	* docs/Makefile.in: New variables BUILT_SOURCES, CLEANFILES. Reorganise
	clean target.

	* src/color.c, src/gadgets.c, src/getcolor.c, src/gpexecute.c,
	src/gplt_x11.c, src/mouse.c, src/pm3d.c: Coding style.

2000-11-24  Alexander Mai  <st002279@hrzpub.tu-darmstadt.de>

        * docs/gnuplot.doc: Update FAQ location. Remove "'" characters from
	headers to make gnuplot.texi 'TeXable' again.

2000-11-24  Petr Mikulik  <mikulik@physics.muni.cz>

	* configure.in config/makefile.os2 term/x11.trm src/gpexecute.h